syntax = "proto3";

package proto;

import "google/api/annotations.proto";

option go_package = "./proto";

message Request {
    string searchword = 1;
    string pagination = 2;
}

message DataOmdp {
    string Title = 1;
    string Year = 2;
    string imdbID = 3;
    string Type = 4;
    string Poster = 5;
}

message Response { 
    repeated DataOmdp Search = 1;
    string totalResults = 2;
    string Response = 3;
}

message RequestDetail {
  string imdbID = 1;
}

message Rating {
  string Source = 1;
  string Value = 2;
}

message ResponseDetail {
  string Title = 1;
  string Year = 2;
  string Rated = 3;
  string Released = 4;
  string Runtime = 5;
  string Genre = 6;
  string Director = 7;
  string Writer = 8;
  string Actors = 9;
  string Plot = 10;
  string Language = 11;
  string Country = 12;
  string Awards = 13;
  string Poster = 14;
  repeated Rating Ratings = 15;
  string Metascore = 16;
  string imdbRating = 17;
  string imdbVotes = 18;
  string imdbID = 19;
  string Type = 20;
  string DVD = 21;
  string BoxOffice = 22;
  string Production = 23;
  string Website = 24;
  string Response = 25;
}

service OmdpService {
  rpc ListMovie(Request) returns (Response) {
      option (google.api.http) = {
      get: "/listMovie/{searchword}/{pagination}"
    };
  };
  rpc DetailMovie(RequestDetail) returns (ResponseDetail) {
    option (google.api.http) = {
      get: "/detailMovie/{imdbID}"
    };
  };
}
